// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo examples basic 1`] = `
.css-0,
[data-css-0] {
  overflow: hidden;
}

.css-0 > div,
[data-css-0] > div {
  background-color: #fff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-2:focus,
[data-css-2]:focus,
.css-2[data-simulate-focus],
[data-css-2][data-simulate-focus] {
  background-color: #f5f7fa;
  outline: 0;
}

.css-2:hover,
[data-css-2]:hover,
.css-2[data-simulate-hover],
[data-css-2][data-simulate-hover] {
  background-color: #f5f7fa;
}

.css-2:active,
[data-css-2]:active,
.css-2[data-simulate-active],
[data-css-2][data-simulate-active] {
  background-color: #ebeff5;
}

.css-2 [role="img"],
[data-css-2] [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2 [role="img"]:first-child,
[data-css-2] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-2 [role="img"]:last-child,
[data-css-2] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-13,
[data-css-13] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-14,
[data-css-14] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1 1 auto;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0.1875em 0 0.25em;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-15,
[data-css-15] {
  font-size: 0.875em;
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.css-16,
[data-css-16] {
  color: #58606e;
  font-size: 0.6875em;
  padding-top: 0.18181818181818182em;
  word-break: break-word;
}

.css-17,
[data-css-17] {
  margin: 0.5em 0;
}

.css-17:first-child,
[data-css-17]:first-child,
.css-17 + .css-17,
[data-css-17] + [data-css-17] {
  margin-top: 0;
}

.css-17:last-child,
[data-css-17]:last-child,
.css-17[data-simulate-lastchild],
[data-css-17][data-simulate-lastchild] {
  margin-bottom: 0;
}

.css-23,
[data-css-23] {
  font-size: 0.6875em;
  font-weight: 700;
  margin: 0;
  padding: 1.4545454545454546em 1.4545454545454546em 0.7272727272727273em;
}

.css-24,
[data-css-24] {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.css-25,
[data-css-25] {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.css-26,
[data-css-26] {
  color: #de1b1b;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-26:focus,
[data-css-26]:focus,
.css-26[data-simulate-focus],
[data-css-26][data-simulate-focus] {
  background-color: #faf0f0;
  outline: 0;
}

.css-26:hover,
[data-css-26]:hover,
.css-26[data-simulate-hover],
[data-css-26][data-simulate-hover] {
  background-color: #faf0f0;
}

.css-26:active,
[data-css-26]:active,
.css-26[data-simulate-active],
[data-css-26][data-simulate-active] {
  background-color: #fad4d4;
}

.css-26 [role="img"],
[data-css-26] [role="img"] {
  box-sizing: content-box;
  color: #de1b1b;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-26 [role="img"]:first-child,
[data-css-26] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-26 [role="img"]:last-child,
[data-css-26] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-37,
[data-css-37] {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-37:focus,
[data-css-37]:focus,
.css-37[data-simulate-focus],
[data-css-37][data-simulate-focus] {
  outline: 0;
}

.css-37 [role="img"],
[data-css-37] [role="img"] {
  box-sizing: content-box;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-37 [role="img"]:first-child,
[data-css-37] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-37 [role="img"]:last-child,
[data-css-37] [role="img"]:last-child {
  margin-left: 0.5em;
}

<glamorous(div)>
  <div
    className="css-0"
  >
    <Menu>
      <Menu>
        <div
          className="css-1"
        >
          <MenuItem
            onClick={[Function]}
          >
            <MenuItem
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            >
              <div
                className="css-2"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <glamorous(span)>
                  <span
                    className="css-13"
                  >
                    <glamorous(span)>
                      <span
                        className="css-14"
                      >
                        <glamorous(span)>
                          <span
                            className="css-15"
                          >
                            Menu item with onClick
                          </span>
                        </glamorous(span)>
                        <glamorous(span)>
                          <span
                            className="css-16"
                          />
                        </glamorous(span)>
                      </span>
                    </glamorous(span)>
                  </span>
                </glamorous(span)>
              </div>
            </MenuItem>
          </MenuItem>
          <MenuItem
            secondaryText="Secondary text"
          >
            <MenuItem
              tabIndex={0}
            >
              <div
                className="css-2"
                tabIndex={0}
              >
                <glamorous(span)>
                  <span
                    className="css-13"
                  >
                    <glamorous(span)>
                      <span
                        className="css-14"
                      >
                        <glamorous(span)>
                          <span
                            className="css-15"
                          >
                            Menu item
                          </span>
                        </glamorous(span)>
                        <glamorous(span)>
                          <span
                            className="css-16"
                          >
                            Secondary text
                          </span>
                        </glamorous(span)>
                      </span>
                    </glamorous(span)>
                  </span>
                </glamorous(span)>
              </div>
            </MenuItem>
          </MenuItem>
          <MenuGroup
            title="Group Title"
          >
            <MenuGroup>
              <div
                className="css-17"
              >
                <MenuGroupTitle>
                  <MenuGroupTitle>
                    <h3
                      className="css-23"
                    >
                      Group Title
                    </h3>
                  </MenuGroupTitle>
                </MenuGroupTitle>
                <MenuItem
                  iconStart={<IconCloud />}
                >
                  <MenuItem
                    tabIndex={0}
                  >
                    <div
                      className="css-2"
                      tabIndex={0}
                    >
                      <glamorous(span)>
                        <span
                          className="css-13"
                        >
                          <IconCloud
                            key="iconStart"
                            size="1.5em"
                          >
                            <Icon
                              rtl={false}
                              size="1.5em"
                            >
                              <glamorous(svg)
                                aria-hidden={true}
                                role="img"
                                rtl={false}
                                size="1.5em"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="css-24"
                                  role="img"
                                  viewBox="0 0 24 24"
                                >
                                  <g>
                                    <path
                                      d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                    />
                                  </g>
                                </svg>
                              </glamorous(svg)>
                            </Icon>
                          </IconCloud>
                          <glamorous(span)>
                            <span
                              className="css-14"
                            >
                              <glamorous(span)>
                                <span
                                  className="css-15"
                                >
                                  Icon at start
                                </span>
                              </glamorous(span)>
                              <glamorous(span)>
                                <span
                                  className="css-16"
                                />
                              </glamorous(span)>
                            </span>
                          </glamorous(span)>
                        </span>
                      </glamorous(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
                <MenuItem
                  iconEnd={<IconCloud />}
                >
                  <MenuItem
                    tabIndex={0}
                  >
                    <div
                      className="css-2"
                      tabIndex={0}
                    >
                      <glamorous(span)>
                        <span
                          className="css-13"
                        >
                          <glamorous(span)>
                            <span
                              className="css-14"
                            >
                              <glamorous(span)>
                                <span
                                  className="css-15"
                                >
                                  Icon at end
                                </span>
                              </glamorous(span)>
                              <glamorous(span)>
                                <span
                                  className="css-16"
                                />
                              </glamorous(span)>
                            </span>
                          </glamorous(span)>
                          <IconCloud
                            key="iconEnd"
                            size="1.5em"
                          >
                            <Icon
                              rtl={false}
                              size="1.5em"
                            >
                              <glamorous(svg)
                                aria-hidden={true}
                                role="img"
                                rtl={false}
                                size="1.5em"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="css-24"
                                  role="img"
                                  viewBox="0 0 24 24"
                                >
                                  <g>
                                    <path
                                      d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                    />
                                  </g>
                                </svg>
                              </glamorous(svg)>
                            </Icon>
                          </IconCloud>
                        </span>
                      </glamorous(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
                <MenuDivider>
                  <MenuDivider
                    role="separator"
                  >
                    <div
                      className="css-25"
                      role="separator"
                    />
                  </MenuDivider>
                </MenuDivider>
                <MenuItem
                  variant="danger"
                >
                  <MenuItem
                    tabIndex={0}
                    variant="danger"
                  >
                    <div
                      className="css-26"
                      tabIndex={0}
                    >
                      <glamorous(span)>
                        <span
                          className="css-13"
                        >
                          <IconDanger
                            size="1.5em"
                          >
                            <Icon
                              rtl={false}
                              size="1.5em"
                            >
                              <glamorous(svg)
                                aria-hidden={true}
                                role="img"
                                rtl={false}
                                size="1.5em"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="css-24"
                                  role="img"
                                  viewBox="0 0 24 24"
                                >
                                  <g>
                                    <path
                                      d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                    />
                                  </g>
                                </svg>
                              </glamorous(svg)>
                            </Icon>
                          </IconDanger>
                          <glamorous(span)>
                            <span
                              className="css-14"
                            >
                              <glamorous(span)>
                                <span
                                  className="css-15"
                                >
                                  Danger variant
                                </span>
                              </glamorous(span)>
                              <glamorous(span)>
                                <span
                                  className="css-16"
                                />
                              </glamorous(span)>
                            </span>
                          </glamorous(span)>
                        </span>
                      </glamorous(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
                <MenuItem
                  disabled={true}
                  onClick={[Function]}
                >
                  <MenuItem
                    disabled={true}
                    onKeyDown={[Function]}
                    tabIndex="-1"
                  >
                    <div
                      className="css-37"
                      onKeyDown={[Function]}
                      tabIndex="-1"
                    >
                      <glamorous(span)>
                        <span
                          className="css-13"
                        >
                          <glamorous(span)>
                            <span
                              className="css-14"
                            >
                              <glamorous(span)>
                                <span
                                  className="css-15"
                                >
                                  Disabled menu item
                                </span>
                              </glamorous(span)>
                              <glamorous(span)>
                                <span
                                  className="css-16"
                                />
                              </glamorous(span)>
                            </span>
                          </glamorous(span)>
                        </span>
                      </glamorous(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
              </div>
            </MenuGroup>
          </MenuGroup>
        </div>
      </Menu>
    </Menu>
  </div>
</glamorous(div)>
`;

exports[`Menu demo examples data 1`] = `
.css-0,
[data-css-0] {
  overflow: hidden;
}

.css-0 > div,
[data-css-0] > div {
  background-color: #fff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-2:focus,
[data-css-2]:focus,
.css-2[data-simulate-focus],
[data-css-2][data-simulate-focus] {
  background-color: #f5f7fa;
  outline: 0;
}

.css-2:hover,
[data-css-2]:hover,
.css-2[data-simulate-hover],
[data-css-2][data-simulate-hover] {
  background-color: #f5f7fa;
}

.css-2:active,
[data-css-2]:active,
.css-2[data-simulate-active],
[data-css-2][data-simulate-active] {
  background-color: #ebeff5;
}

.css-2 [role="img"],
[data-css-2] [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2 [role="img"]:first-child,
[data-css-2] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-2 [role="img"]:last-child,
[data-css-2] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-13,
[data-css-13] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-14,
[data-css-14] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1 1 auto;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0.1875em 0 0.25em;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-15,
[data-css-15] {
  font-size: 0.875em;
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.css-16,
[data-css-16] {
  color: #58606e;
  font-size: 0.6875em;
  padding-top: 0.18181818181818182em;
  word-break: break-word;
}

.css-17,
[data-css-17] {
  margin: 0.5em 0;
}

.css-17:first-child,
[data-css-17]:first-child,
.css-17 + .css-17,
[data-css-17] + [data-css-17] {
  margin-top: 0;
}

.css-17:last-child,
[data-css-17]:last-child,
.css-17[data-simulate-lastchild],
[data-css-17][data-simulate-lastchild] {
  margin-bottom: 0;
}

.css-23,
[data-css-23] {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.css-24,
[data-css-24] {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.css-25,
[data-css-25] {
  color: #de1b1b;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-25:focus,
[data-css-25]:focus,
.css-25[data-simulate-focus],
[data-css-25][data-simulate-focus] {
  background-color: #faf0f0;
  outline: 0;
}

.css-25:hover,
[data-css-25]:hover,
.css-25[data-simulate-hover],
[data-css-25][data-simulate-hover] {
  background-color: #faf0f0;
}

.css-25:active,
[data-css-25]:active,
.css-25[data-simulate-active],
[data-css-25][data-simulate-active] {
  background-color: #fad4d4;
}

.css-25 [role="img"],
[data-css-25] [role="img"] {
  box-sizing: content-box;
  color: #de1b1b;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-25 [role="img"]:first-child,
[data-css-25] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-25 [role="img"]:last-child,
[data-css-25] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-36,
[data-css-36] {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-36:focus,
[data-css-36]:focus,
.css-36[data-simulate-focus],
[data-css-36][data-simulate-focus] {
  outline: 0;
}

.css-36 [role="img"],
[data-css-36] [role="img"] {
  box-sizing: content-box;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-36 [role="img"]:first-child,
[data-css-36] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-36 [role="img"]:last-child,
[data-css-36] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-41,
[data-css-41] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  padding: 0.5em 1em;
  text-decoration: none;
}

.css-41 *,
[data-css-41] *,
.css-41 *::before,
[data-css-41] *::before,
.css-41 *::after,
[data-css-41] *::after {
  box-sizing: inherit;
}

.css-41:focus,
[data-css-41]:focus,
.css-41[data-simulate-focus],
[data-css-41][data-simulate-focus] {
  background-color: #cfe0fc;
  outline: 0;
}

.css-41:hover,
[data-css-41]:hover,
.css-41[data-simulate-hover],
[data-css-41][data-simulate-hover] {
  background-color: #cfe0fc;
}

.css-41:active,
[data-css-41]:active,
.css-41[data-simulate-active],
[data-css-41][data-simulate-active] {
  background-color: #84b1fa;
}

.css-51,
[data-css-51] {
  border-radius: 1em;
  display: block;
  flex: 0 0 auto;
  height: 2em;
  margin-right: 0.5em;
  width: 2em;
  -webkit-flex: 0 0 auto;
}

.css-52,
[data-css-52] {
  flex: 1 1 auto;
  font-size: 0.875em;
  padding: 0.5em 0;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
}

<Component>
  <glamorous(div)>
    <div
      className="css-0"
    >
      <Menu
        data={
          Array [
            Object {
              "onClick": [Function],
              "text": "Menu item with onClick",
            },
            Object {
              "secondaryText": "Secondary text",
              "text": "Menu item",
            },
            Object {
              "iconStart": <IconCloud />,
              "text": "Icon at start",
            },
            Object {
              "iconEnd": <IconCloud />,
              "text": "Icon at end",
            },
            Object {
              "divider": true,
            },
            Object {
              "text": "Danger variant",
              "variant": "danger",
            },
            Object {
              "disabled": true,
              "onClick": [Function],
              "text": "Disabled menu item",
            },
            Object {
              "avatar": "/images/125x125.png",
              "href": "/components/menu-item#custom-render",
              "render": [Function],
              "text": "Custom render",
            },
          ]
        }
      >
        <Menu>
          <div
            className="css-1"
          >
            <MenuGroup
              key="0"
            >
              <MenuGroup>
                <div
                  className="css-17"
                >
                  <MenuItem
                    item={
                      Object {
                        "onClick": [Function],
                        "text": "Menu item with onClick",
                      }
                    }
                    key="0"
                    onClick={[Function]}
                  >
                    <MenuItem
                      item={
                        Object {
                          "onClick": [Function],
                          "text": "Menu item with onClick",
                        }
                      }
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Menu item with onClick
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    item={
                      Object {
                        "secondaryText": "Secondary text",
                        "text": "Menu item",
                      }
                    }
                    key="1"
                    secondaryText="Secondary text"
                  >
                    <MenuItem
                      item={
                        Object {
                          "secondaryText": "Secondary text",
                          "text": "Menu item",
                        }
                      }
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Menu item
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  >
                                    Secondary text
                                  </span>
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    iconStart={<IconCloud />}
                    item={
                      Object {
                        "iconStart": <IconCloud />,
                        "text": "Icon at start",
                      }
                    }
                    key="2"
                  >
                    <MenuItem
                      item={
                        Object {
                          "iconStart": <IconCloud />,
                          "text": "Icon at start",
                        }
                      }
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <IconCloud
                              key="iconStart"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <glamorous(svg)
                                  aria-hidden={true}
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="css-23"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </glamorous(svg)>
                              </Icon>
                            </IconCloud>
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Icon at start
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    iconEnd={<IconCloud />}
                    item={
                      Object {
                        "iconEnd": <IconCloud />,
                        "text": "Icon at end",
                      }
                    }
                    key="3"
                  >
                    <MenuItem
                      item={
                        Object {
                          "iconEnd": <IconCloud />,
                          "text": "Icon at end",
                        }
                      }
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Icon at end
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                            <IconCloud
                              key="iconEnd"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <glamorous(svg)
                                  aria-hidden={true}
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="css-23"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </glamorous(svg)>
                              </Icon>
                            </IconCloud>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuDivider
                    key="4"
                  >
                    <MenuDivider
                      role="separator"
                    >
                      <div
                        className="css-24"
                        role="separator"
                      />
                    </MenuDivider>
                  </MenuDivider>
                  <MenuItem
                    item={
                      Object {
                        "text": "Danger variant",
                        "variant": "danger",
                      }
                    }
                    key="5"
                    variant="danger"
                  >
                    <MenuItem
                      item={
                        Object {
                          "text": "Danger variant",
                          "variant": "danger",
                        }
                      }
                      tabIndex={0}
                      variant="danger"
                    >
                      <div
                        className="css-25"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <IconDanger
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <glamorous(svg)
                                  aria-hidden={true}
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="css-23"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                      />
                                    </g>
                                  </svg>
                                </glamorous(svg)>
                              </Icon>
                            </IconDanger>
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Danger variant
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    disabled={true}
                    item={
                      Object {
                        "disabled": true,
                        "onClick": [Function],
                        "text": "Disabled menu item",
                      }
                    }
                    key="6"
                    onClick={[Function]}
                  >
                    <MenuItem
                      disabled={true}
                      item={
                        Object {
                          "disabled": true,
                          "onClick": [Function],
                          "text": "Disabled menu item",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex="-1"
                    >
                      <div
                        className="css-36"
                        onKeyDown={[Function]}
                        tabIndex="-1"
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Disabled menu item
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    avatar="/images/125x125.png"
                    href="/components/menu-item#custom-render"
                    item={
                      Object {
                        "avatar": "/images/125x125.png",
                        "href": "/components/menu-item#custom-render",
                        "render": [Function],
                        "text": "Custom render",
                      }
                    }
                    key="7"
                    render={[Function]}
                  >
                    <ThemedComponent
                      item={
                        Object {
                          "avatar": "/images/125x125.png",
                          "href": "/components/menu-item#custom-render",
                          "render": [Function],
                          "text": "Custom render",
                        }
                      }
                      itemProps={
                        Object {
                          "avatar": "/images/125x125.png",
                          "children": "Custom render",
                          "href": "/components/menu-item#custom-render",
                          "onKeyDown": undefined,
                          "tabIndex": 0,
                        }
                      }
                      render={[Function]}
                    >
                      <Component
                        item={
                          Object {
                            "avatar": "/images/125x125.png",
                            "href": "/components/menu-item#custom-render",
                            "render": [Function],
                            "text": "Custom render",
                          }
                        }
                        itemProps={
                          Object {
                            "avatar": "/images/125x125.png",
                            "children": "Custom render",
                            "href": "/components/menu-item#custom-render",
                            "onKeyDown": undefined,
                            "tabIndex": 0,
                          }
                        }
                        render={[Function]}
                        theme={
                          Object {
                            "backgroundColor_active": "#ebeff5",
                            "backgroundColor_dangerPrimary": "#de1b1b",
                            "backgroundColor_dangerPrimary_active": "#b80d0d",
                            "backgroundColor_dangerPrimary_focus": "#de1b1b",
                            "backgroundColor_dangerPrimary_hover": "#f55353",
                            "backgroundColor_danger_active": "#fad4d4",
                            "backgroundColor_danger_focus": "#faf0f0",
                            "backgroundColor_danger_hover": "#faf0f0",
                            "backgroundColor_disabled": "#dde3ed",
                            "backgroundColor_focus": "#f5f7fa",
                            "backgroundColor_hover": "#f5f7fa",
                            "backgroundColor_successPrimary": "#2a854e",
                            "backgroundColor_successPrimary_active": "#20693d",
                            "backgroundColor_successPrimary_focus": "#2a854e",
                            "backgroundColor_successPrimary_hover": "#3ba164",
                            "backgroundColor_success_active": "#abedc5",
                            "backgroundColor_success_focus": "#e1faeb",
                            "backgroundColor_success_hover": "#e1faeb",
                            "backgroundColor_themePrimary": "#3272d9",
                            "backgroundColor_themePrimary_active": "#1d5bbf",
                            "backgroundColor_themePrimary_focus": "#3272d9",
                            "backgroundColor_themePrimary_hover": "#5691f0",
                            "backgroundColor_theme_selected": "#f0f5fc",
                            "backgroundColor_theme_selectedActive": "#accbfc",
                            "backgroundColor_theme_selectedHover": "#cfe0fc",
                            "backgroundColor_warningPrimary": "#ad5f00",
                            "backgroundColor_warningPrimary_active": "#8a4d03",
                            "backgroundColor_warningPrimary_focus": "#ad5f00",
                            "backgroundColor_warningPrimary_hover": "#cf7911",
                            "backgroundColor_warning_active": "#fad8af",
                            "backgroundColor_warning_focus": "#fcf2e6",
                            "backgroundColor_warning_hover": "#fcf2e6",
                            "borderColor": "#c8d1e0",
                            "borderColor_danger": "#de1b1b",
                            "borderColor_danger_active": "#b80d0d",
                            "borderColor_danger_focus": "#b80d0d",
                            "borderColor_danger_hover": "#f55353",
                            "borderColor_success": "#2a854e",
                            "borderColor_success_active": "#20693d",
                            "borderColor_success_focus": "#20693d",
                            "borderColor_success_hover": "#3ba164",
                            "borderColor_theme": "#3272d9",
                            "borderColor_theme_active": "#1d5bbf",
                            "borderColor_theme_focus": "#1d5bbf",
                            "borderColor_theme_hover": "#5691f0",
                            "borderColor_warning": "#ad5f00",
                            "borderColor_warning_active": "#8a4d03",
                            "borderColor_warning_focus": "#8a4d03",
                            "borderColor_warning_hover": "#cf7911",
                            "borderRadius_1": "0.1875em",
                            "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
                            "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
                            "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
                            "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
                            "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
                            "boxShadow_focusInner": "#fff",
                            "breakpoint_medium": 768,
                            "breakpoint_narrow": 512,
                            "breakpoint_wide": 1024,
                            "color": "#333840",
                            "color_black": "#1d1f24",
                            "color_danger": "#de1b1b",
                            "color_danger_active": "#b80d0d",
                            "color_danger_focus": "#de1b1b",
                            "color_danger_hover": "#f55353",
                            "color_disabled": "#afbacc",
                            "color_gray_10": "#f5f7fa",
                            "color_gray_100": "#333840",
                            "color_gray_20": "#ebeff5",
                            "color_gray_30": "#dde3ed",
                            "color_gray_40": "#c8d1e0",
                            "color_gray_50": "#afbacc",
                            "color_gray_60": "#8e99ab",
                            "color_gray_70": "#707a8a",
                            "color_gray_80": "#58606e",
                            "color_gray_90": "#434a54",
                            "color_inverted": "#fff",
                            "color_mouse": "#58606e",
                            "color_primary": "#fff",
                            "color_readOnly": "#58606e",
                            "color_required": "#de1b1b",
                            "color_success": "#2a854e",
                            "color_success_active": "#20693d",
                            "color_success_focus": "#2a854e",
                            "color_success_hover": "#3ba164",
                            "color_theme": "#3272d9",
                            "color_theme_10": "#f0f5fc",
                            "color_theme_100": "#15233b",
                            "color_theme_20": "#cfe0fc",
                            "color_theme_30": "#accbfc",
                            "color_theme_40": "#84b1fa",
                            "color_theme_50": "#5691f0",
                            "color_theme_60": "#3272d9",
                            "color_theme_70": "#1d5bbf",
                            "color_theme_80": "#114599",
                            "color_theme_90": "#103570",
                            "color_theme_active": "#1d5bbf",
                            "color_theme_focus": "#3272d9",
                            "color_theme_hover": "#5691f0",
                            "color_warning": "#ad5f00",
                            "color_warning_active": "#8a4d03",
                            "color_warning_focus": "#ad5f00",
                            "color_warning_hover": "#cf7911",
                            "color_white": "#fff",
                            "direction": "ltr",
                            "fontFamily": "Open Sans",
                            "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
                            "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
                            "fontSize_base": 16,
                            "fontSize_mouse": "0.6875em",
                            "fontSize_prose": "1em",
                            "fontSize_ui": "0.875em",
                            "fontWeight_bold": 700,
                            "fontWeight_extraBold": 800,
                            "fontWeight_regular": 400,
                            "fontWeight_semiBold": 600,
                            "h1_color": "#333840",
                            "h1_fontSize": "2.125em",
                            "h1_fontWeight": 800,
                            "h2_color": "#58606e",
                            "h2_fontSize": "1.75em",
                            "h2_fontWeight": 700,
                            "h3_color": "#58606e",
                            "h3_fontSize": "1.375em",
                            "h3_fontWeight": 700,
                            "h4_color": "#58606e",
                            "h4_fontSize": "1.125em",
                            "h4_fontWeight": 700,
                            "h5_color": "#333840",
                            "h5_fontSize": "0.875em",
                            "h5_fontWeight": 700,
                            "h6_color": "#58606e",
                            "h6_fontSize": "0.875em",
                            "h6_fontWeight": 400,
                            "icon_color": "#58606e",
                            "icon_color_danger": "#de1b1b",
                            "icon_color_success": "#2a854e",
                            "icon_color_theme": "#3272d9",
                            "icon_color_warning": "#ad5f00",
                            "input_backgroundColor": "#fff",
                            "input_backgroundColor_disabled": "#ebeff5",
                            "lineHeight": 1.25,
                            "lineHeight_heading": 1.25,
                            "lineHeight_heading_small": 1.5,
                            "lineHeight_prose": 1.5,
                            "panel_backgroundColor": "#fff",
                            "panel_backgroundColor_inverted": "#434a54",
                            "panel_borderColor": "#ebeff5",
                            "panel_borderColor_inverted": "#434a54",
                            "placeholder_color": "#8e99ab",
                            "size_jumbo": "3.25em",
                            "size_large": "2.5em",
                            "size_medium": "2em",
                            "size_small": "1.5em",
                            "space_inline_lg": "1.5em",
                            "space_inline_md": "1em",
                            "space_inline_sm": "0.5em",
                            "space_inline_xl": "2em",
                            "space_inline_xs": "0.25em",
                            "space_inline_xxl": "4em",
                            "space_inline_xxs": "0.125em",
                            "space_inset_lg": "1.5em",
                            "space_inset_md": "1em",
                            "space_inset_sm": "0.5em",
                            "space_stack_lg": "1.5em",
                            "space_stack_md": "1em",
                            "space_stack_sm": "0.5em",
                            "space_stack_xl": "2em",
                            "space_stack_xs": "0.25em",
                            "space_stack_xxl": "4em",
                            "space_stack_xxs": "0.125em",
                            "well_backgroundColor": "#ebeff5",
                            "well_backgroundColor_danger": "#fad4d4",
                            "well_backgroundColor_success": "#abedc5",
                            "well_backgroundColor_warning": "#fad8af",
                            "well_borderColor_danger": "#fa8e8e",
                            "well_borderColor_success": "#57c282",
                            "well_borderColor_warning": "#e89c3f",
                            "zIndex_100": 100,
                            "zIndex_1600": 1600,
                            "zIndex_200": 200,
                            "zIndex_400": 400,
                            "zIndex_800": 800,
                          }
                        }
                      >
                        <glamorous(a)
                          avatar="/images/125x125.png"
                          href="/components/menu-item#custom-render"
                          tabIndex={0}
                        >
                          <a
                            className="css-41"
                            href="/components/menu-item#custom-render"
                            tabIndex={0}
                          >
                            <glamorous(img)
                              alt="Photo of Custom render"
                              src="/images/125x125.png"
                            >
                              <img
                                alt="Photo of Custom render"
                                className="css-51"
                                src="/images/125x125.png"
                              />
                            </glamorous(img)>
                            <glamorous(span)>
                              <span
                                className="css-52"
                              >
                                Custom render
                              </span>
                            </glamorous(span)>
                          </a>
                        </glamorous(a)>
                      </Component>
                    </ThemedComponent>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
          </div>
        </Menu>
      </Menu>
    </div>
  </glamorous(div)>
</Component>
`;

exports[`Menu demo examples grouped-data 1`] = `
.css-0,
[data-css-0] {
  overflow: hidden;
}

.css-0 > div,
[data-css-0] > div {
  background-color: #fff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-2:focus,
[data-css-2]:focus,
.css-2[data-simulate-focus],
[data-css-2][data-simulate-focus] {
  background-color: #f5f7fa;
  outline: 0;
}

.css-2:hover,
[data-css-2]:hover,
.css-2[data-simulate-hover],
[data-css-2][data-simulate-hover] {
  background-color: #f5f7fa;
}

.css-2:active,
[data-css-2]:active,
.css-2[data-simulate-active],
[data-css-2][data-simulate-active] {
  background-color: #ebeff5;
}

.css-2 [role="img"],
[data-css-2] [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2 [role="img"]:first-child,
[data-css-2] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-2 [role="img"]:last-child,
[data-css-2] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-13,
[data-css-13] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-14,
[data-css-14] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex: 1 1 auto;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0.1875em 0 0.25em;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-15,
[data-css-15] {
  font-size: 0.875em;
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.css-16,
[data-css-16] {
  color: #58606e;
  font-size: 0.6875em;
  padding-top: 0.18181818181818182em;
  word-break: break-word;
}

.css-17,
[data-css-17] {
  margin: 0.5em 0;
}

.css-17:first-child,
[data-css-17]:first-child,
.css-17 + .css-17,
[data-css-17] + [data-css-17] {
  margin-top: 0;
}

.css-17:last-child,
[data-css-17]:last-child,
.css-17[data-simulate-lastchild],
[data-css-17][data-simulate-lastchild] {
  margin-bottom: 0;
}

.css-23,
[data-css-23] {
  font-size: 0.6875em;
  font-weight: 700;
  margin: 0;
  padding: 1.4545454545454546em 1.4545454545454546em 0.7272727272727273em;
}

.css-24,
[data-css-24] {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.css-25,
[data-css-25] {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.css-26,
[data-css-26] {
  color: #de1b1b;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-26:focus,
[data-css-26]:focus,
.css-26[data-simulate-focus],
[data-css-26][data-simulate-focus] {
  background-color: #faf0f0;
  outline: 0;
}

.css-26:hover,
[data-css-26]:hover,
.css-26[data-simulate-hover],
[data-css-26][data-simulate-hover] {
  background-color: #faf0f0;
}

.css-26:active,
[data-css-26]:active,
.css-26[data-simulate-active],
[data-css-26][data-simulate-active] {
  background-color: #fad4d4;
}

.css-26 [role="img"],
[data-css-26] [role="img"] {
  box-sizing: content-box;
  color: #de1b1b;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-26 [role="img"]:first-child,
[data-css-26] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-26 [role="img"]:last-child,
[data-css-26] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-37,
[data-css-37] {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.css-37:focus,
[data-css-37]:focus,
.css-37[data-simulate-focus],
[data-css-37][data-simulate-focus] {
  outline: 0;
}

.css-37 [role="img"],
[data-css-37] [role="img"] {
  box-sizing: content-box;
  display: block;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-37 [role="img"]:first-child,
[data-css-37] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-37 [role="img"]:last-child,
[data-css-37] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-42,
[data-css-42] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  padding: 0.5em 1em;
  text-decoration: none;
}

.css-42 *,
[data-css-42] *,
.css-42 *::before,
[data-css-42] *::before,
.css-42 *::after,
[data-css-42] *::after {
  box-sizing: inherit;
}

.css-42:focus,
[data-css-42]:focus,
.css-42[data-simulate-focus],
[data-css-42][data-simulate-focus] {
  background-color: #cfe0fc;
  outline: 0;
}

.css-42:hover,
[data-css-42]:hover,
.css-42[data-simulate-hover],
[data-css-42][data-simulate-hover] {
  background-color: #cfe0fc;
}

.css-42:active,
[data-css-42]:active,
.css-42[data-simulate-active],
[data-css-42][data-simulate-active] {
  background-color: #84b1fa;
}

.css-52,
[data-css-52] {
  border-radius: 1em;
  display: block;
  flex: 0 0 auto;
  height: 2em;
  margin-right: 0.5em;
  width: 2em;
  -webkit-flex: 0 0 auto;
}

.css-53,
[data-css-53] {
  flex: 1 1 auto;
  font-size: 0.875em;
  padding: 0.5em 0;
  white-space: normal;
  word-break: break-all;
  -webkit-flex: 1 1 auto;
}

<Component>
  <glamorous(div)>
    <div
      className="css-0"
    >
      <Menu
        data={
          Array [
            Object {
              "items": Array [
                Object {
                  "onClick": [Function],
                  "text": "Menu item with onClick",
                },
                Object {
                  "secondaryText": "Secondary text",
                  "text": "Menu item",
                },
              ],
            },
            Object {
              "items": Array [
                Object {
                  "iconStart": <IconCloud />,
                  "text": "Icon at start",
                },
                Object {
                  "iconEnd": <IconCloud />,
                  "text": "Icon at end",
                },
                Object {
                  "divider": true,
                },
                Object {
                  "text": "Danger variant",
                  "variant": "danger",
                },
                Object {
                  "disabled": true,
                  "onClick": [Function],
                  "text": "Disabled menu item",
                },
                Object {
                  "avatar": "/images/125x125.png",
                  "href": "/components/menu-item#custom-render",
                  "render": [Function],
                  "text": "Custom render",
                },
              ],
              "title": "Group Title",
            },
          ]
        }
      >
        <Menu>
          <div
            className="css-1"
          >
            <MenuGroup
              key="0"
            >
              <MenuGroup>
                <div
                  className="css-17"
                >
                  <MenuItem
                    item={
                      Object {
                        "onClick": [Function],
                        "text": "Menu item with onClick",
                      }
                    }
                    key="0"
                    onClick={[Function]}
                  >
                    <MenuItem
                      item={
                        Object {
                          "onClick": [Function],
                          "text": "Menu item with onClick",
                        }
                      }
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Menu item with onClick
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    item={
                      Object {
                        "secondaryText": "Secondary text",
                        "text": "Menu item",
                      }
                    }
                    key="1"
                    secondaryText="Secondary text"
                  >
                    <MenuItem
                      item={
                        Object {
                          "secondaryText": "Secondary text",
                          "text": "Menu item",
                        }
                      }
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Menu item
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  >
                                    Secondary text
                                  </span>
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
            <MenuGroup
              key="1"
              title="Group Title"
            >
              <MenuGroup>
                <div
                  className="css-17"
                >
                  <MenuGroupTitle>
                    <MenuGroupTitle>
                      <h3
                        className="css-23"
                      >
                        Group Title
                      </h3>
                    </MenuGroupTitle>
                  </MenuGroupTitle>
                  <MenuItem
                    iconStart={<IconCloud />}
                    item={
                      Object {
                        "iconStart": <IconCloud />,
                        "text": "Icon at start",
                      }
                    }
                    key="0"
                  >
                    <MenuItem
                      item={
                        Object {
                          "iconStart": <IconCloud />,
                          "text": "Icon at start",
                        }
                      }
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <IconCloud
                              key="iconStart"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <glamorous(svg)
                                  aria-hidden={true}
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="css-24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </glamorous(svg)>
                              </Icon>
                            </IconCloud>
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Icon at start
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    iconEnd={<IconCloud />}
                    item={
                      Object {
                        "iconEnd": <IconCloud />,
                        "text": "Icon at end",
                      }
                    }
                    key="1"
                  >
                    <MenuItem
                      item={
                        Object {
                          "iconEnd": <IconCloud />,
                          "text": "Icon at end",
                        }
                      }
                      tabIndex={0}
                    >
                      <div
                        className="css-2"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Icon at end
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                            <IconCloud
                              key="iconEnd"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <glamorous(svg)
                                  aria-hidden={true}
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="css-24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </glamorous(svg)>
                              </Icon>
                            </IconCloud>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuDivider
                    key="2"
                  >
                    <MenuDivider
                      role="separator"
                    >
                      <div
                        className="css-25"
                        role="separator"
                      />
                    </MenuDivider>
                  </MenuDivider>
                  <MenuItem
                    item={
                      Object {
                        "text": "Danger variant",
                        "variant": "danger",
                      }
                    }
                    key="3"
                    variant="danger"
                  >
                    <MenuItem
                      item={
                        Object {
                          "text": "Danger variant",
                          "variant": "danger",
                        }
                      }
                      tabIndex={0}
                      variant="danger"
                    >
                      <div
                        className="css-26"
                        tabIndex={0}
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <IconDanger
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <glamorous(svg)
                                  aria-hidden={true}
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="css-24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                      />
                                    </g>
                                  </svg>
                                </glamorous(svg)>
                              </Icon>
                            </IconDanger>
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Danger variant
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    disabled={true}
                    item={
                      Object {
                        "disabled": true,
                        "onClick": [Function],
                        "text": "Disabled menu item",
                      }
                    }
                    key="4"
                    onClick={[Function]}
                  >
                    <MenuItem
                      disabled={true}
                      item={
                        Object {
                          "disabled": true,
                          "onClick": [Function],
                          "text": "Disabled menu item",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex="-1"
                    >
                      <div
                        className="css-37"
                        onKeyDown={[Function]}
                        tabIndex="-1"
                      >
                        <glamorous(span)>
                          <span
                            className="css-13"
                          >
                            <glamorous(span)>
                              <span
                                className="css-14"
                              >
                                <glamorous(span)>
                                  <span
                                    className="css-15"
                                  >
                                    Disabled menu item
                                  </span>
                                </glamorous(span)>
                                <glamorous(span)>
                                  <span
                                    className="css-16"
                                  />
                                </glamorous(span)>
                              </span>
                            </glamorous(span)>
                          </span>
                        </glamorous(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    avatar="/images/125x125.png"
                    href="/components/menu-item#custom-render"
                    item={
                      Object {
                        "avatar": "/images/125x125.png",
                        "href": "/components/menu-item#custom-render",
                        "render": [Function],
                        "text": "Custom render",
                      }
                    }
                    key="5"
                    render={[Function]}
                  >
                    <ThemedComponent
                      item={
                        Object {
                          "avatar": "/images/125x125.png",
                          "href": "/components/menu-item#custom-render",
                          "render": [Function],
                          "text": "Custom render",
                        }
                      }
                      itemProps={
                        Object {
                          "avatar": "/images/125x125.png",
                          "children": "Custom render",
                          "href": "/components/menu-item#custom-render",
                          "onKeyDown": undefined,
                          "tabIndex": 0,
                        }
                      }
                      render={[Function]}
                    >
                      <Component
                        item={
                          Object {
                            "avatar": "/images/125x125.png",
                            "href": "/components/menu-item#custom-render",
                            "render": [Function],
                            "text": "Custom render",
                          }
                        }
                        itemProps={
                          Object {
                            "avatar": "/images/125x125.png",
                            "children": "Custom render",
                            "href": "/components/menu-item#custom-render",
                            "onKeyDown": undefined,
                            "tabIndex": 0,
                          }
                        }
                        render={[Function]}
                        theme={
                          Object {
                            "backgroundColor_active": "#ebeff5",
                            "backgroundColor_dangerPrimary": "#de1b1b",
                            "backgroundColor_dangerPrimary_active": "#b80d0d",
                            "backgroundColor_dangerPrimary_focus": "#de1b1b",
                            "backgroundColor_dangerPrimary_hover": "#f55353",
                            "backgroundColor_danger_active": "#fad4d4",
                            "backgroundColor_danger_focus": "#faf0f0",
                            "backgroundColor_danger_hover": "#faf0f0",
                            "backgroundColor_disabled": "#dde3ed",
                            "backgroundColor_focus": "#f5f7fa",
                            "backgroundColor_hover": "#f5f7fa",
                            "backgroundColor_successPrimary": "#2a854e",
                            "backgroundColor_successPrimary_active": "#20693d",
                            "backgroundColor_successPrimary_focus": "#2a854e",
                            "backgroundColor_successPrimary_hover": "#3ba164",
                            "backgroundColor_success_active": "#abedc5",
                            "backgroundColor_success_focus": "#e1faeb",
                            "backgroundColor_success_hover": "#e1faeb",
                            "backgroundColor_themePrimary": "#3272d9",
                            "backgroundColor_themePrimary_active": "#1d5bbf",
                            "backgroundColor_themePrimary_focus": "#3272d9",
                            "backgroundColor_themePrimary_hover": "#5691f0",
                            "backgroundColor_theme_selected": "#f0f5fc",
                            "backgroundColor_theme_selectedActive": "#accbfc",
                            "backgroundColor_theme_selectedHover": "#cfe0fc",
                            "backgroundColor_warningPrimary": "#ad5f00",
                            "backgroundColor_warningPrimary_active": "#8a4d03",
                            "backgroundColor_warningPrimary_focus": "#ad5f00",
                            "backgroundColor_warningPrimary_hover": "#cf7911",
                            "backgroundColor_warning_active": "#fad8af",
                            "backgroundColor_warning_focus": "#fcf2e6",
                            "backgroundColor_warning_hover": "#fcf2e6",
                            "borderColor": "#c8d1e0",
                            "borderColor_danger": "#de1b1b",
                            "borderColor_danger_active": "#b80d0d",
                            "borderColor_danger_focus": "#b80d0d",
                            "borderColor_danger_hover": "#f55353",
                            "borderColor_success": "#2a854e",
                            "borderColor_success_active": "#20693d",
                            "borderColor_success_focus": "#20693d",
                            "borderColor_success_hover": "#3ba164",
                            "borderColor_theme": "#3272d9",
                            "borderColor_theme_active": "#1d5bbf",
                            "borderColor_theme_focus": "#1d5bbf",
                            "borderColor_theme_hover": "#5691f0",
                            "borderColor_warning": "#ad5f00",
                            "borderColor_warning_active": "#8a4d03",
                            "borderColor_warning_focus": "#8a4d03",
                            "borderColor_warning_hover": "#cf7911",
                            "borderRadius_1": "0.1875em",
                            "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
                            "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
                            "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
                            "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
                            "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
                            "boxShadow_focusInner": "#fff",
                            "breakpoint_medium": 768,
                            "breakpoint_narrow": 512,
                            "breakpoint_wide": 1024,
                            "color": "#333840",
                            "color_black": "#1d1f24",
                            "color_danger": "#de1b1b",
                            "color_danger_active": "#b80d0d",
                            "color_danger_focus": "#de1b1b",
                            "color_danger_hover": "#f55353",
                            "color_disabled": "#afbacc",
                            "color_gray_10": "#f5f7fa",
                            "color_gray_100": "#333840",
                            "color_gray_20": "#ebeff5",
                            "color_gray_30": "#dde3ed",
                            "color_gray_40": "#c8d1e0",
                            "color_gray_50": "#afbacc",
                            "color_gray_60": "#8e99ab",
                            "color_gray_70": "#707a8a",
                            "color_gray_80": "#58606e",
                            "color_gray_90": "#434a54",
                            "color_inverted": "#fff",
                            "color_mouse": "#58606e",
                            "color_primary": "#fff",
                            "color_readOnly": "#58606e",
                            "color_required": "#de1b1b",
                            "color_success": "#2a854e",
                            "color_success_active": "#20693d",
                            "color_success_focus": "#2a854e",
                            "color_success_hover": "#3ba164",
                            "color_theme": "#3272d9",
                            "color_theme_10": "#f0f5fc",
                            "color_theme_100": "#15233b",
                            "color_theme_20": "#cfe0fc",
                            "color_theme_30": "#accbfc",
                            "color_theme_40": "#84b1fa",
                            "color_theme_50": "#5691f0",
                            "color_theme_60": "#3272d9",
                            "color_theme_70": "#1d5bbf",
                            "color_theme_80": "#114599",
                            "color_theme_90": "#103570",
                            "color_theme_active": "#1d5bbf",
                            "color_theme_focus": "#3272d9",
                            "color_theme_hover": "#5691f0",
                            "color_warning": "#ad5f00",
                            "color_warning_active": "#8a4d03",
                            "color_warning_focus": "#ad5f00",
                            "color_warning_hover": "#cf7911",
                            "color_white": "#fff",
                            "direction": "ltr",
                            "fontFamily": "Open Sans",
                            "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
                            "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
                            "fontSize_base": 16,
                            "fontSize_mouse": "0.6875em",
                            "fontSize_prose": "1em",
                            "fontSize_ui": "0.875em",
                            "fontWeight_bold": 700,
                            "fontWeight_extraBold": 800,
                            "fontWeight_regular": 400,
                            "fontWeight_semiBold": 600,
                            "h1_color": "#333840",
                            "h1_fontSize": "2.125em",
                            "h1_fontWeight": 800,
                            "h2_color": "#58606e",
                            "h2_fontSize": "1.75em",
                            "h2_fontWeight": 700,
                            "h3_color": "#58606e",
                            "h3_fontSize": "1.375em",
                            "h3_fontWeight": 700,
                            "h4_color": "#58606e",
                            "h4_fontSize": "1.125em",
                            "h4_fontWeight": 700,
                            "h5_color": "#333840",
                            "h5_fontSize": "0.875em",
                            "h5_fontWeight": 700,
                            "h6_color": "#58606e",
                            "h6_fontSize": "0.875em",
                            "h6_fontWeight": 400,
                            "icon_color": "#58606e",
                            "icon_color_danger": "#de1b1b",
                            "icon_color_success": "#2a854e",
                            "icon_color_theme": "#3272d9",
                            "icon_color_warning": "#ad5f00",
                            "input_backgroundColor": "#fff",
                            "input_backgroundColor_disabled": "#ebeff5",
                            "lineHeight": 1.25,
                            "lineHeight_heading": 1.25,
                            "lineHeight_heading_small": 1.5,
                            "lineHeight_prose": 1.5,
                            "panel_backgroundColor": "#fff",
                            "panel_backgroundColor_inverted": "#434a54",
                            "panel_borderColor": "#ebeff5",
                            "panel_borderColor_inverted": "#434a54",
                            "placeholder_color": "#8e99ab",
                            "size_jumbo": "3.25em",
                            "size_large": "2.5em",
                            "size_medium": "2em",
                            "size_small": "1.5em",
                            "space_inline_lg": "1.5em",
                            "space_inline_md": "1em",
                            "space_inline_sm": "0.5em",
                            "space_inline_xl": "2em",
                            "space_inline_xs": "0.25em",
                            "space_inline_xxl": "4em",
                            "space_inline_xxs": "0.125em",
                            "space_inset_lg": "1.5em",
                            "space_inset_md": "1em",
                            "space_inset_sm": "0.5em",
                            "space_stack_lg": "1.5em",
                            "space_stack_md": "1em",
                            "space_stack_sm": "0.5em",
                            "space_stack_xl": "2em",
                            "space_stack_xs": "0.25em",
                            "space_stack_xxl": "4em",
                            "space_stack_xxs": "0.125em",
                            "well_backgroundColor": "#ebeff5",
                            "well_backgroundColor_danger": "#fad4d4",
                            "well_backgroundColor_success": "#abedc5",
                            "well_backgroundColor_warning": "#fad8af",
                            "well_borderColor_danger": "#fa8e8e",
                            "well_borderColor_success": "#57c282",
                            "well_borderColor_warning": "#e89c3f",
                            "zIndex_100": 100,
                            "zIndex_1600": 1600,
                            "zIndex_200": 200,
                            "zIndex_400": 400,
                            "zIndex_800": 800,
                          }
                        }
                      >
                        <glamorous(a)
                          avatar="/images/125x125.png"
                          href="/components/menu-item#custom-render"
                          tabIndex={0}
                        >
                          <a
                            className="css-42"
                            href="/components/menu-item#custom-render"
                            tabIndex={0}
                          >
                            <glamorous(img)
                              alt="Photo of Custom render"
                              src="/images/125x125.png"
                            >
                              <img
                                alt="Photo of Custom render"
                                className="css-52"
                                src="/images/125x125.png"
                              />
                            </glamorous(img)>
                            <glamorous(span)>
                              <span
                                className="css-53"
                              >
                                Custom render
                              </span>
                            </glamorous(span)>
                          </a>
                        </glamorous(a)>
                      </Component>
                    </ThemedComponent>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
          </div>
        </Menu>
      </Menu>
    </div>
  </glamorous(div)>
</Component>
`;
